chore: Update pre-commit hook versions, Python dependencies, and migrate vulnerability ignore list to `.pip-audit-ignore`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,11 @@ name: CI
 on:
   push:
     branches: ["main"]
+    tags: ["*"]
   pull_request:
     branches: ["main"]
+  workflow_dispatch:
 
-# Cambia esto por el nombre real de tu paquete Python (para coverage)
 env:
   PACKAGE_NAME: "vatuta"
 
@@ -41,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12", "3.13"]
+        python-version: ["3.12", "3.13", "3.14"]
 
     steps:
       - name: Checkout
@@ -123,13 +124,18 @@ jobs:
         run: |
           poetry install --no-interaction --no-ansi
 
+      - name: Build pip-audit ignore flags from .pip-audit-ignore
+        run: |
+          FLAGS=$(grep -v '^\s*#' .pip-audit-ignore | grep -v '^\s*$' | sed 's/^/--ignore-vuln /' | tr '\n' ' ')
+          echo "PIP_AUDIT_IGNORE_FLAGS=$FLAGS" >> "$GITHUB_ENV"
+
       - name: Generate pip-audit text report
         run: |
-          poetry run pip-audit --desc > pip-audit.txt || true
+          poetry run pip-audit ${{ env.PIP_AUDIT_IGNORE_FLAGS }} --desc > pip-audit.txt || true
 
       - name: Run pip-audit (JSON report)
         run: |
-          poetry run pip-audit -f json -o pip-audit.json
+          poetry run pip-audit ${{ env.PIP_AUDIT_IGNORE_FLAGS }} -f json -o pip-audit.json
 
       - name: Upload pip-audit report
         uses: actions/upload-artifact@v4
